...
        android:id="@+id/albumsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/album_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/crearAlbumFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src ="@drawable/baseline_add_circle_outline"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/purple_200"
...
